--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.3.7",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mocha": "^10.2.0",
     "mongoose": "^7.0.0",
